SERVER-72063 Throw on attempt to create overly small oplog

(cherry picked from commit ac38b8ebe46bdd3ca3010c09956c8099424c6c1a)